Fix file card alignment in ie11

--- a/packages/components/file-card/src/file-card.css
+++ b/packages/components/file-card/src/file-card.css
@@ -49,6 +49,7 @@
 	justify-content: center;
 	flex-grow: 2;
 	max-width: calc(100% - 20px - 35px);
+	width: calc(100% - 20px - 35px);
 	padding: var(--ts-unit-half) var(--ts-unit-half);
 }
 
@@ -131,23 +132,6 @@
 
 .state-download[data-removable] .download-action {
 	display: none;
-}
-
-.file-card-wrapper .file-card {
-	align-items: center;
-	background-color: var(--ts-color-white);
-	border-radius: var(--ts-radius);
-	border: var(--ts-border);
-	cursor: pointer;
-	display: flex;
-	height: calc(6.5 * var(--ts-unit-half));
-	justify-content: space-between;
-	margin-bottom: var(--ts-unit-half);
-	overflow: hidden;
-	padding: calc(0.5 * var(--ts-unit-half)) calc(1px + var(--ts-unit-half));
-	position: relative;
-	transition: border var(--ts-transition-fast) ease;
-	width: 100%;
 }
 
 .file-information {
